# LogzAssignment

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  settings.json
config/: config.yaml
kubernetes/: configmap.yaml  deployment.yaml  secret.yaml
src/: main.py  settings.json  weather_data.py
src/config/: Config.py
src/data_source/: __init__.py  abstract_data_source.py  csv_data_source.py  openweather_data_source.py  weatherapi_data_source.py
src/manager/: data_source_manager.py
src/polling/: csv_data_source.py  openweather_data_source.py  weatherapi_data_source.py
